# benchflow

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: build-images.yaml
argo/templates/common/: collect-artifacts.yaml  collect-metrics.yaml  deploy-run-plan.yaml  download-model.yaml  resolve-run-plan.yaml  run-experiment-matrix.yaml  run-guidellm-benchmark.yaml  setup-run-plan.yaml  upload-to-mlflow.yaml  wait-for-endpoint.yaml
argo/workflows/: e2e.yaml  matrix.yaml
config/cluster/secrets/: mlflow-s3-creds.example.yaml
config/monitoring/: grafana-dashboard-benchflow-archive.json
docs/: ADVANCED.md
experiments/llm-d/: gpt-oss-120b-release.yaml  llama-33-70b-release.yaml  speculative-placement.yaml
experiments/profile/: rhoai-multiturn-profile.yaml
experiments/rhaiis/: llama-33-70b-release.yaml
experiments/rhoai/: gpt-oss-120b-release.yaml  llama-33-70b-release.yaml  release.yaml
experiments/smoke/: qwen3-06b-llm-d-matrix-smoke.yaml  qwen3-06b-llm-d-smoke.yaml  qwen3-06b-rhoai-distributed-default-smoke.yaml  qwen3-06b-rhoai-matrix-smoke.yaml
profiles/benchmark/: concurrent-heavy-heterogeneous-v2.yaml  concurrent-heavy-heterogeneous.yaml  multi-turn.yaml  smoke.yaml
profiles/deployment/llm-d/: inference-scheduling.yaml  (+1 more)
profiles/metrics/: detailed.yaml
src/benchflow/: artifacts.py  assets.py  cli.py  cluster.py  execution.py  install.py  kueue.py  loaders.py  matrix.py  mlflow_upload.py  model.py  models.py  plans.py  platform_state.py  remote_jobs.py  tasking.py  ui.py  waiting.py
tekton/pipelines/: e2e.yaml  matrix.yaml
(+82 files in other folders)
